--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
-    "three": "^0.160.0",
-    "typescript": "^4.9.5",
+    "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +49,7 @@
     "@types/three": "^0.160.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "typescript": "^4.9.5"
   }
 }
