--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "antd": "^5.27.6",
+    "axios": "^1.13.0",
+    "lucide-react": "^0.548.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.3.0",
     "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
